--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -1,6 +1,7 @@
 /* ハンバーガーメニュー */
 #overlay-button {
     padding: 26px 11px;
+    margin: 15px;
     z-index: 5;
     cursor: pointer;
     user-select: none;
@@ -9,7 +10,6 @@
     box-shadow: 5px 5px 5px #B7B7B7;
 }
 
-/* 真ん中の棒の挙動 */
 #overlay-button span {
     height: 4px;
     width: 35px;
@@ -107,10 +107,19 @@ input[type=checkbox]:checked~#overlay-button span:after {
     font-size: 1.5em;
 }
 
+#overlay ul li button {
+    color: #3560F6;
+    text-decoration: none;
+    font-size: 1.5em;
+    border: none;
+    background-color: #fff;
+    cursor: pointer;
+}
+
+/* ハンバーガーメニュー以外 */
 .header {
     width: 100%;
     display: flex;
-    align-items: center;
     background-color: #F2F2F2;
 }
 
