--- a/src/public/css/shop_detail.css
+++ b/src/public/css/shop_detail.css
@@ -15,6 +15,8 @@
     cursor: pointer;
     border-radius: 3px;
     box-shadow: 5px 5px 5px #B7B7B7;
+    color: black;
+    text-decoration: none;
 }
 
 .shop__contents {
