--- a/src/public/css/my_page.css
+++ b/src/public/css/my_page.css
@@ -26,7 +26,7 @@ h2 {
     margin: 0 auto 30px 30px;
 }
 
-.back {
+.rsv__delete--btn {
     border: 2px solid #fff;
     color: #fff;
     font-weight: bold;
