--- a/src/public/css/my_page.css
+++ b/src/public/css/my_page.css
@@ -22,8 +22,13 @@ h2 {
     margin: 20px;
 }
 
+.form__icon{
+    display: flex;
+    justify-content: left;
+}
+
 .rsv__ttl {
-    margin: 0 auto 30px 30px;
+    margin: 0 auto 30px 10px;
 }
 
 .rsv__delete--btn {
