--- a/src/public/css/register.css
+++ b/src/public/css/register.css
@@ -39,8 +39,28 @@ input {
     width: 80%;
 }
 
-input::before {
-    /* アイコン挿入 */
+.form__name-text::before {
+    content: "person";
+    font-family: 'Material Icons';
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 8px;
+}
+
+.form__email-text::before {
+    content: "email";
+    font-family: 'Material Icons';
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 8px;
+}
+
+.form__pwd-text::before {
+    content: "lock";
+    font-family: 'Material Icons';
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 8px;
 }
 
 /* バリデーションエラー */
