--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -133,3 +133,143 @@ body {
     width: 100vw;
     background-color: #F2F2F2;
 }
+
+@media screen and (max-width: 768px) {
+    #overlay-button {
+        padding: 26px 11px;
+        margin: 15px;
+        z-index: 5;
+        cursor: pointer;
+        user-select: none;
+        background-color: #3560F6;
+        border-radius: 5px;
+        box-shadow:3px 3px 3px #B7B7B7;
+    }
+
+    #overlay-button span {
+        height: 4px;
+        width: 35px;
+        border-radius: 2px;
+        background-color: white;
+        position: relative;
+        display: block;
+    }
+
+    #overlay-button span:before {
+        top: -10px;
+        visibility: visible;
+    }
+
+    #overlay-button span:after {
+        top: 10px;
+    }
+
+    #overlay-button span:before {
+        height: 4px;
+        width: 20px;
+        border-radius: 2px;
+        background-color: white;
+        position: absolute;
+        content: "";
+    }
+
+
+    #overlay-button span:after {
+        height: 4px;
+        width: 10px;
+        border-radius: 2px;
+        background-color: white;
+        position: absolute;
+        content: "";
+    }
+
+    #overlay-button:hover span,
+    #overlay-button:hover span:before,
+    #overlay-button:hover span:after {
+        background: #fff;
+    }
+
+    input[type=checkbox] {
+        display: none;
+    }
+
+    input[type=checkbox]:checked~#overlay {
+        visibility: visible;
+    }
+
+    input[type=checkbox]:checked~#overlay-button:hover span,
+    input[type=checkbox]:checked~#overlay-button span {
+        background: transparent;
+    }
+
+    input[type=checkbox]:checked~#overlay-button span:before {
+        transform: rotate(45deg) translate(7px, 7px);
+        width: 35px;
+    }
+
+    input[type=checkbox]:checked~#overlay-button span:after {
+        transform: rotate(-45deg) translate(7px, -7px);
+        width: 35px;
+    }
+
+    #overlay {
+        height: 100vh;
+        width: 100vw;
+        background: #fff;
+        z-index: 2;
+        visibility: hidden;
+        position: fixed;
+        margin: 0;
+    }
+
+    #overlay ul {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        text-align: center;
+        height: 100vh;
+        padding-left: 0;
+        list-style-type: none;
+    }
+
+    #overlay ul li {
+        padding: 1em;
+    }
+
+    #overlay ul li a {
+        color: #3560F6;
+        text-decoration: none;
+        font-size: 1.5em;
+    }
+
+    #overlay ul li button {
+        color: #3560F6;
+        text-decoration: none;
+        font-size: 1.5em;
+        border: none;
+        background-color: #fff;
+        cursor: pointer;
+    }
+
+    .header {
+        width: 100%;
+        display: flex;
+        background-color: #F2F2F2;
+    }
+
+    .header-ttl {
+        color: #3560F6;
+        margin-left: 20px;
+    }
+
+    body {
+        height: 100vh;
+        width: 100vw;
+        background-color: #F2F2F2;
+    }
+
+
+
+
+}
