--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -73,3 +73,82 @@ input {
     padding: 10px 20px;
     border-radius: 5px;
 }
+
+
+@media screen and (max-width: 768px) {
+    h2 {
+        margin: 0;
+        text-align: left;
+        padding: 10px;
+    }
+
+    main {
+        background-color: #F2F2F2;
+        padding: 0px;
+    }
+
+    .login__content {
+        width: 80%;
+        text-align: center;
+        margin: auto;
+        box-shadow: 3px 3px 3px #B7B7B7;
+    }
+
+    .login__group-title {
+        color: #fff;
+        background-color: #3560F6;
+    }
+
+    .login__form-content {
+        background-color: #fff;
+        padding: 10px;
+    }
+
+    .form__email-text,
+    .form__pwd-text {
+        margin: 15px;
+    }
+
+    input {
+        border: none;
+        outline: none;
+        border-bottom: 2px solid #999;
+        width: 80%;
+    }
+
+    .form__email-text::before {
+        content: "email";
+        font-family: 'Material Icons';
+        display: inline-block;
+        vertical-align: middle;
+        margin-right: 5px;
+    }
+
+    .form__pwd-text::before {
+        content: "lock";
+        font-family: 'Material Icons';
+        display: inline-block;
+        vertical-align: middle;
+        margin-right: 5px;
+    }
+
+    /* バリデーションエラー */
+    .form__error {
+        color: #ff0000;
+        border-bottom: 10px;
+    }
+
+    .form__button {
+        text-align: right
+    }
+
+    .form__button-login {
+        background-color: #3560F6;
+        color: #fff;
+        cursor: pointer;
+        border: none;
+        margin: 20px;
+        padding: 10px 20px;
+        border-radius: 5px;
+    }
+}
