レスポンシブデザイン修正

--- a/src/public/css/done.css
+++ b/src/public/css/done.css
@@ -1,8 +1,6 @@
 h2 {
-    margin: 0;
     padding: 20px;
     text-align: center;
-    margin: 50px;
 }
 
 .done__content {
@@ -23,4 +21,32 @@ h2 {
     margin: 30px;
     padding: 10px;
     border-radius: 5px;
+}
+
+/* レスポンシブ */
+@media screen and (max-width: 768px) {
+    h2 {
+        padding: 20px;
+        text-align: center;
+    }
+
+    .done__content {
+        width: 70%;
+        text-align: center;
+        margin: auto;
+        background-color: #fff;
+        padding: 20px;
+        border-radius: 5px;
+        box-shadow: 5px 5px 5px #B7B7B7;
+    }
+
+    .back-link {
+        background-color: #3560F6;
+        color: #fff;
+        cursor: pointer;
+        text-decoration: none;
+        margin: 30px;
+        padding: 10px;
+        border-radius: 5px;
+    }
 }
