--- a/src/public/css/rating.css
+++ b/src/public/css/rating.css
@@ -20,7 +20,7 @@
 }
 
 .shop__contents {
-    width: 50%;
+    width: 40%;
 }
 
 .shop__contents-ttl {
@@ -45,7 +45,7 @@
     background-color: #FFF;
     border-radius: 5px;
     box-shadow: 5px 5px 5px #B7B7B7;
-    width: 40%;
+    width: 50%;
     position: relative;
     padding: 30px;
 }
@@ -73,7 +73,7 @@
 .form__fiveStar {
     display: flex;
     flex-direction: row-reverse;
-    justify-content: left;
+    justify-content: space-around;
 }
 
 .form__fiveStar input[type='radio'] {
@@ -121,3 +121,128 @@ textarea{
     border: none;
 }
 
+/* レスポンシブ */
+@media screen and (max-width: 768px) {
+    .shop-detail__wrapper {
+        display: block;
+        width: 100%;
+        margin: 30px 0;
+        padding-top: 30px;
+    }
+
+    .back {
+        margin: 20px;
+        font-weight: bolder;
+        background-color: #FFFFFF;
+        border: none;
+        padding: 10px;
+        cursor: pointer;
+        border-radius: 3px;
+        box-shadow: 5px 5px 5px #B7B7B7;
+        color: black;
+        text-decoration: none;
+    }
+
+    .shop__contents {
+        width: 80%;
+        margin: auto;
+    }
+
+    .shop__contents-ttl {
+        display: flex;
+        justify-content: left;
+    }
+
+    .shop__contets-img {
+        width: 100%;
+    }
+
+    .shop__img {
+        width: 100%;
+    }
+
+    .shop__contents-tag {
+        display: flex;
+        justify-content: left;
+    }
+
+    .shop__rate {
+        background-color: #FFF;
+        border-radius: 5px;
+        box-shadow: 5px 5px 5px #B7B7B7;
+        width: 80%;
+        margin: auto;
+        padding: 30px;
+    }
+
+    .shop__rate-txt {
+        margin: 30px 0px;
+    }
+
+    .shop__rate-form {
+        margin: 30px 0px;
+    }
+
+    .form__group {
+        width: 80%;
+        margin: 20px;
+    }
+
+
+    .form__error {
+        color: #3560F6;
+        margin: 30px;
+        font-size: larger;
+    }
+
+    .form__fiveStar {
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: flex-end;
+    }
+
+    .form__fiveStar input[type='radio'] {
+        display: none;
+    }
+
+    .form__fiveStar label.star {
+        position: relative;
+        padding: 0px;
+        color: gray;
+        cursor: pointer;
+        font-size: 30px;
+    }
+
+    .form__fiveStar label.star span.evaluation {
+        position: absolute;
+        left: 0;
+        top: 0;
+        right: 0;
+        text-align: center;
+        font-size: 12px;
+        color: gray;
+        width: 100px;
+    }
+
+    .form__fiveStar label.star:hover,
+    .form__fiveStar label.star:hover~label.star,
+    .form__fiveStar input[type='radio']:checked~label.star {
+        color: #ffcc00;
+    }
+
+    textarea {
+        width: 100%;
+        height: 100px;
+        border-radius: 5px;
+        border-style: solid;
+    }
+
+    .form__button-rate {
+        color: #FFF;
+        background-color: #3560F6;
+        margin: 30px 0;
+        padding: 10px;
+        border-radius: 5px;
+        border: none;
+    }
+}
