--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -9,6 +9,14 @@ main {
     padding: 50px;
 }
 
+.flash_message{
+    text-align: center;
+    margin: 30px;
+    color: #ff0000;
+    background-color: #fff;
+    padding: 30px;
+}
+
 .login__content {
     width: 50%;
     text-align: center;
