--- a/src/public/css/my_page.css
+++ b/src/public/css/my_page.css
@@ -69,7 +69,7 @@ h2 {
 .my-page__fav-card {
     width: 40%;
     background-color: #fff;
-    margin: 10px auto;
+    margin: 10px;
     border-radius: 3px;
     box-shadow: 3px 3px 3px #B7B7B7;
     position: relative;
