--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -10,7 +10,7 @@
     box-shadow: 5px 5px 5px #B7B7B7;
 }
 
-#overlay-button span {
+#overlay-button .hamburger-btn {
     height: 4px;
     width: 35px;
     border-radius: 2px;
@@ -19,16 +19,16 @@
     display: block;
 }
 
-#overlay-button span:before {
+#overlay-button .hamburger-btn:before {
     top: -10px;
     visibility: visible;
 }
 
-#overlay-button span:after {
+#overlay-button .hamburger-btn:after {
     top: 10px;
 }
 
-#overlay-button span:before {
+#overlay-button .hamburger-btn:before {
     height: 4px;
     width: 20px;
     border-radius: 2px;
@@ -38,7 +38,7 @@
 }
 
 
-#overlay-button span:after {
+#overlay-button .hamburger-btn:after {
     height: 4px;
     width: 10px;
     border-radius: 2px;
@@ -47,41 +47,36 @@
     content: "";
 }
 
-#overlay-button:hover span,
-#overlay-button:hover span:before,
-#overlay-button:hover span:after {
+#overlay-button:hover .hamburger-btn,
+#overlay-button:hover .hamburger-btn:before,
+#overlay-button:hover .hamburger-btn:after {
     background: #fff;
 }
 
-input[type=checkbox] {
+.hamburger-menu {
     display: none;
 }
 
-input[type=checkbox]:checked~#overlay {
+.hamburger-menu:checked~#overlay {
     visibility: visible;
 }
 
-input[type=checkbox]:checked~#overlay-button:hover span,
-input[type=checkbox]:checked~#overlay-button span {
+.hamburger-menu:checked~#overlay-button:hover .hamburger-btn,
+.hamburger-menu:checked~#overlay-button .hamburger-btn {
     background: transparent;
 }
 
-input[type=checkbox]:checked~#overlay-button span:before {
+.hamburger-menu:checked~#overlay-button .hamburger-btn:before {
     transform: rotate(45deg) translate(7px, 7px);
     width: 35px;
 }
 
-input[type=checkbox]:checked~#overlay-button span:after {
+.hamburger-menu:checked~#overlay-button .hamburger-btn:after {
     transform: rotate(-45deg) translate(7px, -7px);
     width: 35px;
 }
 
-h2{
-
-}
-
-h3{
-    margin-bottom: 50px;
+.hamburger-ttl{
     font-weight: lighter;
 }
 
@@ -96,7 +91,7 @@ h3{
     margin: 0;
 }
 
-#overlay ul {
+#overlay .hamburger-menu__list-wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -107,31 +102,23 @@ h3{
     list-style-type: none;
 }
 
-#overlay ul li {
+#overlay .hamburger-menu__list-wrapper .hamburger-menu__list {
     padding: 1em;
 }
 
-#overlay ul li a {
+#overlay .hamburger-menu__list-wrapper .hamburger-menu__list .menu__link {
     color: #3560F6;
     text-decoration: none;
     font-size: 1.5em;
 }
 
-#overlay ul li button {
+#overlay .hamburger-menu__list-wrapper .hamburger-menu__list .header-nav__button {
     color: #3560F6;
     text-decoration: none;
     font-size: 1.5em;
     border: none;
     background-color: #fff;
     cursor: pointer;
-}
-
-.admin{
-    margin-top: 100px;
-}
-
-.admin__link{
-    border-bottom: 1px solid;
 }
 
 /* ハンバーガーメニュー以外 */
@@ -146,156 +133,20 @@ h3{
     margin-left: 20px;
 }
 
-body {
+.body {
     height: 100vh;
     width: 100vw;
     background-color: #F2F2F2;
 }
 
+.main {
+    background-color: #F2F2F2;
+    padding: 50px 0; 
+}
+
 /* レスポンシブ */
 @media screen and (max-width: 768px) {
     #overlay-button {
-        padding: 26px 11px;
-        margin: 15px;
-        z-index: 5;
-        cursor: pointer;
-        user-select: none;
-        background-color: #3560F6;
-        border-radius: 5px;
-        box-shadow:3px 3px 3px #B7B7B7;
+        box-shadow: 5px 5px 5px #B7B7B7;
     }
-
-    #overlay-button span {
-        height: 4px;
-        width: 35px;
-        border-radius: 2px;
-        background-color: white;
-        position: relative;
-        display: block;
-    }
-
-    #overlay-button span:before {
-        top: -10px;
-        visibility: visible;
-    }
-
-    #overlay-button span:after {
-        top: 10px;
-    }
-
-    #overlay-button span:before {
-        height: 4px;
-        width: 20px;
-        border-radius: 2px;
-        background-color: white;
-        position: absolute;
-        content: "";
-    }
-
-
-    #overlay-button span:after {
-        height: 4px;
-        width: 10px;
-        border-radius: 2px;
-        background-color: white;
-        position: absolute;
-        content: "";
-    }
-
-    #overlay-button:hover span,
-    #overlay-button:hover span:before,
-    #overlay-button:hover span:after {
-        background: #fff;
-    }
-
-    input[type=checkbox] {
-        display: none;
-    }
-
-    input[type=checkbox]:checked~#overlay {
-        visibility: visible;
-    }
-
-    input[type=checkbox]:checked~#overlay-button:hover span,
-    input[type=checkbox]:checked~#overlay-button span {
-        background: transparent;
-    }
-
-    input[type=checkbox]:checked~#overlay-button span:before {
-        transform: rotate(45deg) translate(7px, 7px);
-        width: 35px;
-    }
-
-    input[type=checkbox]:checked~#overlay-button span:after {
-        transform: rotate(-45deg) translate(7px, -7px);
-        width: 35px;
-    }
-
-    h2 {}
-
-    h3 {
-        margin-bottom: 50px;
-        font-weight: lighter;
-    }
-    
-    #overlay {
-        height: 100vh;
-        width: 100vw;
-        background: #fff;
-        z-index: 2;
-        visibility: hidden;
-        position: fixed;
-        margin: 0;
-    }
-
-    #overlay ul {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        text-align: center;
-        height: 100vh;
-        padding-left: 0;
-        list-style-type: none;
-    }
-
-    #overlay ul li {
-        padding: 1em;
-    }
-
-    #overlay ul li a {
-        color: #3560F6;
-        text-decoration: none;
-        font-size: 1.5em;
-    }
-
-    #overlay ul li button {
-        color: #3560F6;
-        text-decoration: none;
-        font-size: 1.5em;
-        border: none;
-        background-color: #fff;
-        cursor: pointer;
-    }
-
-    .header {
-        width: 100%;
-        display: flex;
-        background-color: #F2F2F2;
-    }
-
-    .header-ttl {
-        color: #3560F6;
-        margin-left: 20px;
-    }
-
-    body {
-        height: 100vh;
-        width: 100vw;
-        background-color: #F2F2F2;
-    }
-
-
-
-
 }
