--- a/src/public/css/update_shop.css
+++ b/src/public/css/update_shop.css
@@ -53,7 +53,7 @@
     width: 50%;
 }
 
-h3 {
+.shop-update__ttl {
     margin: 30px 20px;
     color: #fff;
     text-align: center;
@@ -117,9 +117,8 @@ h3 {
 @media screen and (max-width: 768px) {
     .shop-detail__wrapper {
         display: block;
-        width: 100%;
-        margin: 30px 0;
-        padding-top: 30px;
+        margin: 0;
+        padding-top: 0;
     }
 
     .shop__contents {
@@ -127,107 +126,18 @@ h3 {
         margin: auto;
     }
 
-    .shop__contents-ttl {
-        display: flex;
-        justify-content: left;
-    }
-
-    .shop__contents-info {
-        font-size: larger;
-        text-align: center;
-        font-weight: bolder;
-    }
-
-
-    .back {
-        margin: 20px;
-        font-weight: bolder;
-        background-color: #FFFFFF;
-        border: none;
-        padding: 10px;
-        cursor: pointer;
-        border-radius: 3px;
-        box-shadow: 5px 5px 5px #B7B7B7;
-        color: black;
-        text-decoration: none;
-    }
-
-    .shop__contets-img {
-        width: 100%;
-    }
-
-    .shop__img {
-        width: 100%;
-    }
-
-    .shop__contents-tag {
-        display: flex;
-        justify-content: left;
-    }
-
     .shop__contents-update {
         background-color: #007bff;
         width: 90%;
         margin: auto;
-    }
-
-    h3 {
-        margin: 30px 20px;
-        color: #fff;
-        text-align: center;
-    }
-
-    .form__group {
-        width: 80%;
-        margin: 20px;
-    }
-
-    .form__shop-name,
-    .form__shop-area,
-    .form__shop-genre {
-        height: 30px;
-        width: 100%;
-    }
-
-    .form__shop-comment {
-        width: 100%;
-        height: 200px;
-    }
-
-    .form__error {
-        color: #fff;
-        margin: 30px;
-        font-size: larger;
-    }
-
-    .form__shop-photo--ttl {
-        color: #fff;
-        margin-top: 30px;
+        padding: 10px 0 0 0;
     }
 
     .form__shop-photo {
-        display: flex;
-        flex-wrap: wrap;
         justify-content: space-between;
-        align-items: center;
-        margin: 30px;
     }
 
     .shop-photo__wrapper {
         width: 40%;
-        margin: 10px;
-    }
-
-    .shop_photo {
-        width: 100%;
-    }
-
-    .rsv__edit--btn {
-        width: 100%;
-        background-color: #3560F6;
-        color: #fff;
-        cursor: pointer;
-        height: 50px;
-        border-style: none;
     }
 }
