--- a/src/public/css/manager_menu.css
+++ b/src/public/css/manager_menu.css
@@ -1,3 +1,11 @@
+.flash_message {
+    text-align: center;
+    margin: 30px;
+    color: #ff0000;
+    background-color: #fff;
+    padding: 30px;
+}
+
 .menu__content{
     background-color: #fff;
     width: 50%;
@@ -8,6 +16,7 @@
 
 .menu__list--wrapper {
     list-style: none;
+    padding: 0;
 }
 
 .menu__info{
