--- a/src/public/css/update_shop.css
+++ b/src/public/css/update_shop.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-around;
     width: 100%;
-    margin: 30px 0;
+    margin: 30px;
     padding-top: 30px;
 }
 
@@ -51,6 +51,7 @@
 .shop__contents-update {
     background-color: #007bff;
     width: 50%;
+    margin: auto;
 }
 
 .shop-update__ttl {
@@ -87,23 +88,6 @@
     margin-top: 30px;
 }
 
-.form__shop-photo {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    align-items: center;
-    margin: 30px;
-}
-
-.shop-photo__wrapper{
-    width: 30%;
-    margin: 10px;
-}
-
-.shop_photo{
-    width: 100%;
-}
-
 .rsv__edit--btn {
     width: 100%;
     background-color: #3560F6;
@@ -133,11 +117,4 @@
         padding: 10px 0 0 0;
     }
 
-    .form__shop-photo {
-        justify-content: space-between;
-    }
-
-    .shop-photo__wrapper {
-        width: 40%;
-    }
 }
